# specipy

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  specipy.py
_specipy/: framework.py
tests/examples/: unit_test.py
