[tool.poetry]
name = "specipy"
version = "0.1.0"
description = "A python toolset to drive emergent design by specification"
authors = ["Marco De Bortoli <493257+debo@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[tool.poetry.group.dev.dependencies.black]
preview = true
line-length = 120
target-version = ['py38']

[tool.poetry.group.dev.dependencies.isort]
py_version = 38
profile = "black"
force_single_line = true
src_paths = ["*/app", "*/tests"]

[tool.poetry.group.dev.dependencies.mypy]
python_version = "3.8.1"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests", "features"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
